# a71ch-demo

./: .cproject  .gitignore  .gitignore.swp  .project  README.md
a71ch/: a71ch_api.h  a71ch_const.h
a71ch/api/inc/: HLSEComm.h  HLSECrypto.h  HLSEMisc.h  HLSETypes.h  ax_api.h  ax_common.h  ax_common_private.h  ax_scp.h  ax_util.h
a71ch/api/src/: ax_crypto_rng.c  ax_scp.c  ax_util.c
a71ch/libCommon/hostCrypto/: HostCryptoAPI.h  HostCryptoAPIOpenSSL.c  axHostCrypto.h
a71ch/libCommon/infra/: a71_debug.c  global_platf.c  global_platf.h  sm_apdu.c  sm_apdu.h  sm_errors.c  sm_errors.h  sm_types.h
a71ch/libCommon/scp/: scp.h
a71ch/libCommon/smCom/: apduComm.h  sci2c.h  sci2c_cfg.h  smCom.c  smCom.h  smComSocket_linux.c
a71ch/tstUtil/: app_boot.c  app_boot.h  axCliUtil.c  axCliUtil.h  axWebUtil.h  hkdf_mbedtls.c  hkdf_mbedtls.h  probeAxUtil.c  probeAxUtil.h  tstHostCrypto.h  tst_a71ch_util.c  tst_a71ch_util.h  tst_sm_util.c
hostLib/: CMakeLists.txt  ToolchainFile_imx6.cmake
hostLib/a71ch/: CMakeLists.txt
hostLib/a71ch/app/: configCli.c  configCli.h  configCliApdu.c  configCliConnect.c  configCliDebug.c  configCliEcrt.c  configCliErase.c  configCliGen.c  configCliGet.c  configCliInfo.c  configCliInteractive.c  configCliInteractive_ln.c  configCliLock.c  configCliObj.c  configCliRcrt.c  configCliRefpem.c  configCliScp.c  configCliScript.c  configCliSet.c  configCliTransport.c  configCliWcrt.c  configCmd.h  configCmdApdu.c  configCmdConnect.c  configCmdDebug.c  configCmdEcrt.c  configCmdErase.c  configCmdGen.c  configCmdGet.c  configCmdInfo.c  configCmdLock.c  configCmdObj.c  configCmdRcrt.c  configCmdRefpem.c  configCmdScp.c  configCmdSet.c  configCmdTransport.c  configCmdWcrt.c  configState.c  configState.h  (+2 more)
hostLib/a71ch/ex/: a71ch_ex.h  ex_aes.c  ex_boot.c  ex_config.c  ex_debug.c  ex_ecc_nohc.c  ex_gpstorage.c  ex_misc.c  ex_psk.c  ex_scp.c  ex_sst.c  ex_sst_kp.c  ex_walkthrough.c  mainA71CH.c  premake5.lua
hostLib/a71ch/ex_hlse/: a71ch_ex_hlse.h  ex_hlse_aes.c  ex_hlse_boot.c  ex_hlse_cert.c  ex_hlse_config.c  ex_hlse_debug.c  ex_hlse_ecc_nohc.c  ex_hlse_gpstorage.c  ex_hlse_misc.c  ex_hlse_psk.c  ex_hlse_scp.c  ex_hlse_sst.c  ex_hlse_sst_kp.c  ex_hlse_walkthrough.c  mainA71CH_hlse.c  premake5.lua  readme.txt
hostLib/a71ch/inc/: a71ch_api.h
hostLib/a71ch/light/: ex_light.c  mainA71CHLight.c  premake5.lua  readme.txt
hostLib/a71ch/script/: a71chConfigDemo.sh  a71ch_config_script.txt  a71ch_config_script_breakdown_scp03.txt  a71ch_config_script_prepare_scp03.txt  a71ch_config_script_use_scp03.txt
hostLib/a71ch/script/tstEccKeys/: keyfile_ecc_nist_256_2_shortPrivKey.pem
hostLib/a71ch/script/tstFiles/: scp03KeyFile.txt
hostLib/a71ch/src/: a71ch_com.c  a71ch_crypto_derive.c  a71ch_crypto_ecc.c  a71ch_module.c  a71ch_sst.c  premake5.lua
hostLib/api/: CMakeLists.txt
hostLib/api/inc/: HLSEObjects.h  ax_api.h  ax_common.h  ax_scp.h  ax_scp_private.h
hostLib/api/src/: A71HLSEWrapper.c
hostLib/embSeEngine/a71chDemo/ecc/: tls_client.cer  tls_client.csr  tls_client_key.pem  tls_client_key_pub.pem  tls_rootca.cer  tls_rootca_key.pem  tls_server.cer  tls_server.csr  tls_server_key.pem
hostLib/embSeEngine/a71chDemo/eccRef/: Readme.txt  ecc_key_kp_4_ref.pem  ecc_key_pub_3_ref.pem
hostLib/embSeEngine/a71chDemo/scripts/: .srl  a71chConfigCmdHistory.txt  a71chEcDhKa.sh  a71chEccCsrDemo.sh  a71chEccSignDemo.sh  a71chEccSignNegTest.sh  a71chPrepareEcc.sh  a71chRandDemo.sh  a71chTlsClient.sh  tlsCreateCredentialsRunOnClientOnce.sh  tlsPrepareClient.sh  tlsSeClient.sh  tlsServer.sh
hostLib/embSeEngine/a71chEx/: Makefile_a71chEcDhKa  Makefile_a71chTlsClient  a71chEcDhKa.c  a71chTlsClient  a71chTlsClient.c
hostLib/embSeEngine/inc/: ax_cryptoIpc.h  ax_embSeEngine.h  ax_embSeEngine_Internal.h
hostLib/embSeEngine/info/: opensslA71CH_i2c.cnf
hostLib/embSeEngine/src/: ax_a71chEngine.c  ax_cryptoIpc.c
hostLib/libCommon/hostCrypto/: axHostCryptoOpenSSL.c  axHostCryptoStubs.c  hcAsn.c  hcAsn.h
hostLib/libCommon/infra/: a71_debug.h
hostLib/libCommon/scp/: premake5.lua  scp.c  scp.h
hostLib/libCommon/smCom/: apduComm.h  sci2c.c  smCom.h  smComSCI2C.c  smComSCI2C.h  smComSocket.h  smComSocket_win32.c
hostLib/platform/generic/: .gitignore  sm_printf.c
hostLib/platform/imx/: i2c_a7.c
hostLib/platform/inc/: i2c_a7.h  sm_printf.h  sm_timer.h
hostLib/rjct/inc/: rjct.h
hostLib/rjct/src/: mainRjct.c  rjct.c  rjct_com.c
hostLib/tstUtil/: axEccRefPem.c  axEccRefPem.h  axWebUtil.c  hkdf.c  linenoise.c  tstHostCrypto.c  tst_a71ch_util.c  tst_a71ch_util.h  tst_hlse_a71ch_util.c  tst_hlse_a71ch_util.h  tst_sm_time.c  tst_sm_time.h  tst_sm_util.h
inc/: tdxecc.h
linux/: Makefile_A71CH  buildA71CH.sh  packageA71chOpenSslEngine.sh
src/: tdxecc.c
toradex/: Makefile  a71chtdx.c
toradex/host/: welcome.sh
toradex/webserver/: requestobj.py  webserver.py
